@@ -1,3 +1,8 @@
+2008-03-24  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs: Remove redundant
+	  member. May fix some compilation errors.
+
 2008-03-21  Marcos David Marín Amador <MarcosMarin@gmail.com> 
 
 	* MonoDevelop.XmlEditor.Gui/XmlSchemasPanelWidget.cs: Workaround bug in mono
